syntax="proto3";

package Protocol;

message AuthRequest{
	string token = 1; //用户token
	string uid = 2; //用户id
	int64  timestamp = 3; //发包时间戳
}

message AuthResponse {
	enum Status {
		OK = 0;
		Err = 1;
	}
	Status status  = 1;//状态，使用枚举
	int32 err_code = 2; //错误码，统一定义的错误码
	string	err_msg = 3;//错误描述
}
