syntax="proto3";

package Protocol;

message KickoutRequest{
	enum Reasion{
		OTHER_LOGIN = 0; //其他地方登录
	}
	Reasion reasion  =1 ; //踢人原因
}
