syntax="proto3";

package Protocol;

message PullRequest{
	int64 uid = 1;		//用户id
	int64 offset = 2;	//拉取离线消息起始位置，初始时0，之后用服务器放回的数据
	int32 limit = 3;	//单次拉取离线消息的数量，默认值10
}

message PullMsg{
	int64 from = 1;	//发送者
	int64 group = 2;	//目的群，-1表示单聊
	string content = 3;	//消息内容
	int64 msgid =4;		//消息服务器对消息的编号
	int32 cmdid = 5;	//消息原始命令号
	int64 send_time = 6;//服务器接受消息的时间
}

message PullResponse{
	repeated PullMsg msg  = 1;
}